--- a/.github/ci_includes/actions_versions.yml
+++ b/.github/ci_includes/actions_versions.yml
@@ -11,3 +11,5 @@
 "werf/actions/converge": "werf/actions/converge@v2"
 "dorny/paths-filter": "dorny/paths-filter@v2"
 "ssh-agent": "webfactory/ssh-agent@v0.9.0"
+"peter-evans/create-pull-request": "peter-evans/create-pull-request@v7.0.8"
+
