chore: add k8s autoupdate
Signed-off-by: Kirill Kramorov <kirill.kramorov@flant.com>

--- a/.github/ci_includes/actions_versions.yml
+++ b/.github/ci_includes/actions_versions.yml
@@ -12,4 +12,5 @@
 "dorny/paths-filter": "dorny/paths-filter@v2"
 "ssh-agent": "webfactory/ssh-agent@v0.9.0"
 "peter-evans/create-pull-request": "peter-evans/create-pull-request@v7.0.8"
+"actions/setup-go": "actions/setup-go@v5.4.0"
 
