--- a/.github/workflows/k8s-autoupdate.yml
+++ b/.github/workflows/k8s-autoupdate.yml
@@ -33,6 +33,9 @@ jobs:
       uses: actions/checkout@v3.5.2
 
     # </template: checkout_step>
+    - uses: actions/setup-go@v5.4.0
+      with:
+        go-version: '1.23.7'
     - name: Setup
       id: get_minimal_milestone
       uses: actions/github-script@v6.4.1
