chore: add k8s autoupdate
Signed-off-by: Kirill Kramorov <kirill.kramorov@flant.com>

--- a/.github/workflow_templates/k8s-autoupdate.yml
+++ b/.github/workflow_templates/k8s-autoupdate.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: [self-hosted, regular]
     permissions:
       contents: write
+      pull-requests: write
     steps:
 {!{ tmpl.Exec "checkout_step" . | strings.Indent 4 }!}
     - uses: {!{ index (ds "actions") "actions/setup-go" }!}
@@ -76,10 +77,7 @@ jobs:
       id: create-pull-request
       uses: {!{ index (ds "actions") "peter-evans/create-pull-request" }!}
       with:
-        commit-message: |
-          Automated Change: Update k8s patch version
-
-          Signed-off-by: deckhouse-BOaTswain <89150800+deckhouse-boatswain@users.noreply.github.com>
+        commit-message: "Automated Change: Update k8s patch version"
         title: "Automated Change: Update k8s patch version"
         body-path: ".github/k8s_autoupdate_pull_request_template.md"
         branch: chore/k8s-autoupdate
