--- a/.github/workflow_templates/k8s-autoupdate.yml
+++ b/.github/workflow_templates/k8s-autoupdate.yml
@@ -28,6 +28,7 @@ jobs:
     - uses: {!{ index (ds "actions") "actions/setup-go" }!}
       with:
         go-version: '1.23.7'
+        cache: false
     - name: Setup
       id: get_minimal_milestone
       uses: {!{ index (ds "actions") "actions/github-script" }!}
