--- a/.github/workflows/k8s-autoupdate.yml
+++ b/.github/workflows/k8s-autoupdate.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: actions/setup-go@v5.4.0
       with:
         go-version: '1.23.7'
+        cache: false
     - name: Setup
       id: get_minimal_milestone
       uses: actions/github-script@v6.4.1
