--- a/.github/workflow_templates/k8s-autoupdate.yml
+++ b/.github/workflow_templates/k8s-autoupdate.yml
@@ -101,5 +101,14 @@ jobs:
       run: |
         PULL_REQUEST_URL="${{ steps.create-pull-request.outputs.pull-request-url }}"
         bash ./.github/scripts/send-report.sh --message "✅Kubernetes has been automatically updated✅\n[URL]($PULL_REQUEST_URL)"
+    - name: Send failure report
+      if: failure()
+      env:
+        LOOP_TOKEN: ${{secrets.LOOP_CVE_REPORTS_SEND_TOKEN}}
+#        LOOP_CHANNEL_ID: ${{secrets.LOOP_E2E_REPORT_CHANEL_ID}}
+        LOOP_CHANNEL_ID: rc4zcp9rp38z9xzy8cjmjtybdr
+      run: |
+        WORKFLOW_URL="${{github.server_url}}/${{github.repository}}/actions/runs/${{github.run_id}}"
+        bash ./.github/scripts/send-report.sh --message "🛑Kubernetes failed to update automatically🛑\n[URL]($WORKFLOW_URL)"
 
 
