--- a/.github/workflows/k8s-autoupdate.yml
+++ b/.github/workflows/k8s-autoupdate.yml
@@ -87,7 +87,7 @@ jobs:
       id: create-pull-request
       uses: peter-evans/create-pull-request@v7.0.8
       env:
-        BOATSWAIN_GITHUB_TOKEN: ${{secrets.BOATSWAIN_GITHUB_TOKEN}}
+        BOATSWAIN_GITHUB_TOKEN: ${{secrets.CHANGELOG_ACCESS_TOKEN}}
       with:
         commit-message: |
           "Automated Change: Update k8s patch version
@@ -101,6 +101,7 @@ jobs:
         base: main
         labels: e2e/run/yandex-cloud
         milestone: ${{ steps.setup.outputs.milestone }}
+        delete-branch: true
     - name: Send success report
       if: ${{ steps.create-pull-request.outputs.pull-request-url != '' }}
       env:
