--- a/.github/workflows/k8s-autoupdate.yml
+++ b/.github/workflows/k8s-autoupdate.yml
@@ -86,8 +86,6 @@ jobs:
     - name: Create Pull Request
       id: create-pull-request
       uses: peter-evans/create-pull-request@v3.10.1
-      env:
-        BOATSWAIN_GITHUB_TOKEN: ${{secrets.CHANGELOG_ACCESS_TOKEN}}
       with:
         commit-message: |
           "Automated Change: Update k8s patch version
@@ -97,7 +95,7 @@ jobs:
         body-path: ".github/k8s_autoupdate_pull_request_template.md"
         branch: chore/k8s-autoupdate
         branch-suffix: timestamp
-        token: $BOATSWAIN_GITHUB_TOKEN
+        token: ${{ secrets.BOATSWAIN_GITHUB_TOKEN }}
         base: main
         labels: e2e/run/yandex-cloud
         milestone: ${{ steps.setup.outputs.milestone }}
