--- a/.github/workflow_templates/k8s-autoupdate.yml
+++ b/.github/workflow_templates/k8s-autoupdate.yml
@@ -30,7 +30,7 @@ jobs:
         go-version: '1.23.7'
         cache: false
     - name: Setup
-      id: get_minimal_milestone
+      id: get_milestone
       uses: {!{ index (ds "actions") "actions/github-script" }!}
       with:
         script: |
@@ -89,7 +89,7 @@ jobs:
         token: ${{ secrets.BOATSWAIN_GITHUB_TOKEN }}
         base: main
         labels: e2e/run/yandex-cloud
-        milestone: ${{ steps.setup.outputs.milestone }}
+        milestone: ${{ steps.get_milestone.outputs.milestone }}
         delete-branch: true
     - name: Send success report
       if: ${{ steps.create-pull-request.outputs.pull-request-url != '' }}
