chore: add k8s autoupdate
Signed-off-by: Kirill Kramorov <kirill.kramorov@flant.com>

--- a/.github/workflow_templates/k8s-autoupdate.yml
+++ b/.github/workflow_templates/k8s-autoupdate.yml
@@ -61,7 +61,7 @@ jobs:
               }
               return 0; // Equal
             })[0];
-
+            console.log(JSON.stringify(targetMilestone));
             core.setOutput('milestone', targetMilestone.id);
             console.log(`Milestone number found: ${targetMilestone}`);
           } else {
