--- a/.github/workflows/k8s-autoupdate.yml
+++ b/.github/workflows/k8s-autoupdate.yml
@@ -70,7 +70,7 @@ jobs:
               }
               return 0; // Equal
             })[0];
-
+            console.log(JSON.stringify(targetMilestone));
             core.setOutput('milestone', targetMilestone.id);
             console.log(`Milestone number found: ${targetMilestone}`);
           } else {
