feat: add spellcheck validate
Signed-off-by: Kirill Kramorov <kirill.kramorov@flant.com>

--- a/.github/workflows/build-and-test_pre-release.yml
+++ b/.github/workflows/build-and-test_pre-release.yml
@@ -195,6 +195,7 @@ jobs:
 
           (cd tools && go generate)
           (cd modules/500-upmeter/hooks/smokemini/internal/snapshot && go generate)
+          (make docs-spellcheck-generate-dictionary)
 
       - name: Check generated code
         run: |
