--- a/.github/ci_templates/build.yml
+++ b/.github/ci_templates/build.yml
@@ -17,6 +17,7 @@ steps:
       {!{/* TODO replace with 'make generate' when make become available on runners */}!}
       (cd tools && go generate)
       (cd modules/500-upmeter/hooks/smokemini/internal/snapshot && go generate)
+      (make docs-spellcheck-generate-dictionary)
 
   - name: Check generated code
     run: |
