--- a/.github/workflow_templates/e2e-daily.yml
+++ b/.github/workflow_templates/e2e-daily.yml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{!{- $enableWorkflowOnTestRepos := false -}!}
+{!{- $enableWorkflowOnTestRepos := true -}!}
 {!{- $workflowName := "Daily e2e tests" }!}
 name: '{!{ $workflowName }!}'
 on:
   schedule:
-  - cron: '0 1 * * 1-5'
+  - cron: '51 10 * * 1-5'
   workflow_dispatch:
 
 env:
